--- a/src/main/resources/fxml/ItemMenu.fxml
+++ b/src/main/resources/fxml/ItemMenu.fxml
@@ -40,7 +40,7 @@
         <Label layoutX="28.0" layoutY="501.0" text="Grade:" />
         <Label fx:id="gradeLabel" layoutX="64.0" layoutY="501.0" prefHeight="17.0" prefWidth="93.0" />
         <Separator layoutX="334.0" layoutY="25.0" orientation="VERTICAL" prefHeight="698.0" prefWidth="4.0" />
-        <Button layoutX="504.0" layoutY="175.0" mnemonicParsing="false" onAction="#addToCart" prefHeight="30.0" prefWidth="131.0" text="Add to Cart" />
+        <Button layoutX="451.0" layoutY="640.0" mnemonicParsing="false" onAction="#addToCart" prefHeight="30.0" prefWidth="232.0" text="Add to Cart" />
         <Label layoutX="32.0" layoutY="559.0" prefHeight="17.0" prefWidth="35.0" text="View:" />
         <Label fx:id="viewLabel" layoutX="64.0" layoutY="559.0" prefHeight="17.0" prefWidth="56.0" />
         <Button layoutX="228.0" layoutY="641.0" mnemonicParsing="false" onAction="#rate" prefHeight="27.0" prefWidth="93.0" text="Rate Item" />
@@ -50,7 +50,7 @@
         <Polygon fx:id="star3" fill="#AAAAAA" layoutX="95" layoutY="635" onMouseClicked="#star3Update" points="20,4.006 ,23.97,16.224 ,36.814,16.224, 26.424,23.774 ,30.392,35.992 ,20,28.442, 9.606,35.992 ,13.578,23.774 ,3.184,16.224 ,16.03,16.224" />
         <Polygon fx:id="star4" fill="#AAAAAA" layoutX="130" layoutY="635" onMouseClicked="#star4Update" points="20,4.006 ,23.97,16.224 ,36.814,16.224, 26.424,23.774 ,30.392,35.992 ,20,28.442, 9.606,35.992 ,13.578,23.774 ,3.184,16.224 ,16.03,16.224" />
         <Polygon fx:id="star5" fill="#AAAAAA" layoutX="165" layoutY="635" onMouseClicked="#star5Update" points="20,4.006 ,23.97,16.224 ,36.814,16.224, 26.424,23.774 ,30.392,35.992 ,20,28.442, 9.606,35.992 ,13.578,23.774 ,3.184,16.224 ,16.03,16.224" />
-      <ImageView fx:id="ivTarget" fitHeight="355.0" fitWidth="365.0" layoutX="387.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ivTarget" fitHeight="355.0" fitWidth="365.0" layoutX="387.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="messageImageView" fitHeight="76.0" fitWidth="93.0" layoutX="181.0" layoutY="277.0" pickOnBounds="true" preserveRatio="true" />
       <Label layoutX="26.0" layoutY="610.0" text="price after Sale:" />
       <Label fx:id="priceAfterSaleLabel" layoutX="119.0" layoutY="610.0" prefHeight="17.0" prefWidth="82.0" />
@@ -60,10 +60,11 @@
                 <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView fx:id="attributeListView" layoutX="60.0" layoutY="71.0" prefHeight="407.0" prefWidth="387.0" />
-                        <Label layoutX="120.0" layoutY="524.0" prefHeight="17.0" prefWidth="104.0" text="Comparable Items:" />
-                        <ComboBox fx:id="itemComoBox" layoutX="268.0" layoutY="520.0" onMouseClicked="#updateItemComoBox" prefWidth="150.0" />
-                        <Button layoutX="272.0" layoutY="572.0" mnemonicParsing="false" onAction="#compare" prefHeight="39.0" prefWidth="147.0" text="Compare" />
+                        <ListView fx:id="attributeListView" layoutX="60.0" layoutY="200.0" prefHeight="331.0" prefWidth="387.0" />
+                        <Label layoutX="120.0" layoutY="574.0" prefHeight="17.0" prefWidth="104.0" text="Comparable Items:" />
+                        <ComboBox fx:id="itemComoBox" layoutX="269.0" layoutY="570.0" onMouseClicked="#updateItemComoBox" prefWidth="150.0" />
+                        <Button layoutX="270.0" layoutY="614.0" mnemonicParsing="false" onAction="#compare" prefHeight="39.0" prefWidth="147.0" text="Compare" />
+                        <TextArea fx:id="itemDetails" editable="false" layoutX="61.0" layoutY="42.0" prefHeight="106.0" prefWidth="385.0" />
                      </children></AnchorPane>
                 </content>
             </Tab>
