--- a/src/main/resources/fxml/SalesMenu.fxml
+++ b/src/main/resources/fxml/SalesMenu.fxml
@@ -29,45 +29,49 @@
     <Button fx:id="pageNumAdd" layoutX="668.0" layoutY="673.0" mnemonicParsing="false" onAction="#increasePage" prefHeight="25.0" prefWidth="29.0" text="+" />
     <ChoiceBox fx:id="sortChoiceBox" layoutX="794.0" layoutY="46.0" onAction="#sort" prefHeight="27.0" prefWidth="206.0" />
     <Label layoutX="746.0" layoutY="51.0" prefHeight="17.0" prefWidth="48.0" text="sort :" />
-    <Pane layoutX="14.0" layoutY="83.0" prefHeight="453.0" prefWidth="225.0">
-        <CheckBox fx:id="availableCheckBox" layoutX="22.0" layoutY="68.0" onMouseClicked="#filterAvailibility" />
-        <Label layoutX="38.0" layoutY="68.0" text="filter availaibility" />
-
-
-        <CheckBox fx:id="categoryNameCheckBox" layoutX="22.0" layoutY="287.0" onMouseClicked="#filterCategoryName" />
-        <Label layoutX="40.0" layoutY="287.0" text="category name:" />
-        <TextField fx:id="categoryNameFilter" layoutX="20.0" layoutY="310.0" onKeyReleased="#filterCategoryTextChange" promptText="Desired Category" styleClass="underlinedTextField" />
-
-
-        <CheckBox fx:id="brandNameCheckBox" layoutX="22.0" layoutY="342.0" onMouseClicked="#filterBrandName" />
-        <Label layoutX="40.0" layoutY="342.0" text="brandName:" />
-        <TextField fx:id="brandName" layoutX="20.0" layoutY="359.0" onKeyReleased="#filterBrandNameTextChange" promptText="Enter a Brand" styleClass="underlinedTextField" />
-
-
-        <CheckBox fx:id="searchCheckBox" layoutX="22.0" layoutY="6.0" onMouseClicked="#filterSearch" />
-        <Label layoutX="41.0" layoutY="6.0" text="search:" />
-        <TextField fx:id="search" layoutX="19.0" layoutY="29.0" onKeyReleased="#filterSearchTextChange" promptText="Enter a query" styleClass="underlinedTextField" />
-
-
-        <CheckBox fx:id="priceCheckBox" layoutX="22.0" layoutY="98.0" onMouseClicked="#priceFilter" />
-        <Label layoutX="44.0" layoutY="98.0" text="price:" />
-        <Label layoutX="118.0" layoutY="120.0" text="to" />
-        <TextField fx:id="maxPrice" layoutX="146.0" layoutY="115.0" onKeyReleased="#filterPriceTextChange" prefHeight="27.0" prefWidth="63.0" promptText="Max." styleClass="underlinedTextField" />
-        <TextField fx:id="minPrice" layoutX="41.0" layoutY="116.0" onKeyReleased="#filterPriceTextChange" prefHeight="25.0" prefWidth="63.0" promptText="Min." styleClass="underlinedTextField" />
-
-
-
-        <CheckBox fx:id="attributeCheckBox" layoutX="22.0" layoutY="168.0" onMouseClicked="#attributeFilter" />
-        <TextField fx:id="attributeKey" layoutX="19.0" layoutY="192.0" onKeyReleased="#filterAttributeTextChange" promptText="Enter a key" styleClass="underlinedTextField" />
-        <TextField fx:id="attributeValue" layoutX="19.0" layoutY="227.0" onKeyReleased="#filterAttributeTextChange" promptText="Enter a value" styleClass="underlinedTextField" />
-
-
-        <CheckBox fx:id="sellerNameCheckBox" layoutX="22.0" layoutY="397.0" onMouseClicked="#sellerFilter" />
-        <Label layoutX="41.0" layoutY="397.0" text="seller name:" />
-        <TextField fx:id="sellerName" layoutX="19.0" layoutY="414.0" onKeyReleased="#filterSellerTextChange" promptText="Enter a Seller" styleClass="underlinedTextField" />
-
-
-        <Label layoutX="45.0" layoutY="168.0" prefHeight="17.0" prefWidth="65.0" text="attributes:" />
-    </Pane>
+   <ScrollPane layoutX="1012.0" layoutY="83.0" prefHeight="249.0" prefWidth="254.0">
+      <content>
+          <Pane prefHeight="453.0" prefWidth="225.0">
+              <CheckBox fx:id="availableCheckBox" layoutX="22.0" layoutY="68.0" onMouseClicked="#filterAvailibility" />
+              <Label layoutX="38.0" layoutY="68.0" text="filter availaibility" />
+      
+      
+              <CheckBox fx:id="categoryNameCheckBox" layoutX="22.0" layoutY="287.0" onMouseClicked="#filterCategoryName" />
+              <Label layoutX="40.0" layoutY="287.0" text="category name:" />
+              <TextField fx:id="categoryNameFilter" layoutX="20.0" layoutY="310.0" onKeyReleased="#filterCategoryTextChange" promptText="Desired Category" styleClass="underlinedTextField" />
+      
+      
+              <CheckBox fx:id="brandNameCheckBox" layoutX="22.0" layoutY="342.0" onMouseClicked="#filterBrandName" />
+              <Label layoutX="40.0" layoutY="342.0" text="brandName:" />
+              <TextField fx:id="brandName" layoutX="20.0" layoutY="359.0" onKeyReleased="#filterBrandNameTextChange" promptText="Enter a Brand" styleClass="underlinedTextField" />
+      
+      
+              <CheckBox fx:id="searchCheckBox" layoutX="22.0" layoutY="6.0" onMouseClicked="#filterSearch" />
+              <Label layoutX="41.0" layoutY="6.0" text="search:" />
+              <TextField fx:id="search" layoutX="19.0" layoutY="29.0" onKeyReleased="#filterSearchTextChange" promptText="Enter a query" styleClass="underlinedTextField" />
+      
+      
+              <CheckBox fx:id="priceCheckBox" layoutX="22.0" layoutY="98.0" onMouseClicked="#priceFilter" />
+              <Label layoutX="44.0" layoutY="98.0" text="price:" />
+              <Label layoutX="118.0" layoutY="120.0" text="to" />
+              <TextField fx:id="maxPrice" layoutX="146.0" layoutY="115.0" onKeyReleased="#filterPriceTextChange" prefHeight="27.0" prefWidth="63.0" promptText="Max." styleClass="underlinedTextField" />
+              <TextField fx:id="minPrice" layoutX="41.0" layoutY="116.0" onKeyReleased="#filterPriceTextChange" prefHeight="25.0" prefWidth="63.0" promptText="Min." styleClass="underlinedTextField" />
+      
+      
+      
+              <CheckBox fx:id="attributeCheckBox" layoutX="22.0" layoutY="168.0" onMouseClicked="#attributeFilter" />
+              <TextField fx:id="attributeKey" layoutX="19.0" layoutY="192.0" onKeyReleased="#filterAttributeTextChange" promptText="Enter a key" styleClass="underlinedTextField" />
+              <TextField fx:id="attributeValue" layoutX="19.0" layoutY="227.0" onKeyReleased="#filterAttributeTextChange" promptText="Enter a value" styleClass="underlinedTextField" />
+      
+      
+              <CheckBox fx:id="sellerNameCheckBox" layoutX="22.0" layoutY="397.0" onMouseClicked="#sellerFilter" />
+              <Label layoutX="41.0" layoutY="397.0" text="seller name:" />
+              <TextField fx:id="sellerName" layoutX="19.0" layoutY="414.0" onKeyReleased="#filterSellerTextChange" promptText="Enter a Seller" styleClass="underlinedTextField" />
+      
+      
+              <Label layoutX="45.0" layoutY="168.0" prefHeight="17.0" prefWidth="65.0" text="attributes:" />
+          </Pane>
+      </content>
+   </ScrollPane>
 
 </AnchorPane>
