--- a/src/main/resources/fxml/AdminMenu/AddCategory.fxml
+++ b/src/main/resources/fxml/AdminMenu/AddCategory.fxml
@@ -2,21 +2,23 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #dedcde;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.AddCategory">
-    <MenuBar>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #dedcde;" stylesheets="@../../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.AddCategory">
+    <MenuBar prefHeight="25.0" prefWidth="600.0" styleClass="myMenuBar">
         <Menu text="options">
             <MenuItem onAction="#back" text="back" />
         </Menu>
     </MenuBar>
-    <Label layoutX="14.0" layoutY="61.0" text="category name:" />
-    <TextField fx:id="categoryName" layoutX="105.0" layoutY="56.0" onKeyReleased="#updateCategoryName"> </TextField>
-    <TextField fx:id="attribute" layoutX="105.0" layoutY="100.0"> </TextField>
-    <ListView fx:id="attributeList" layoutX="300.0" layoutY="55.0" onMouseClicked="#remove" prefHeight="209.0" prefWidth="248.0" />
-    <Button layoutX="266.0" layoutY="100.0" onMouseClicked="#add" text="+" />
-    <Label layoutX="46.0" layoutY="105.0" text="attribute:" />
-    <Label layoutX="13.0" layoutY="158.0" text="father category:" />
-    <Button layoutX="213.0" layoutY="237.0" onMouseClicked="#create" text="create" />
-    <Button layoutX="105.0" layoutY="237.0" onMouseClicked="#reset" text="reset" />
-   <ChoiceBox fx:id="fatherCategoryChoice" layoutX="105.0" layoutY="153.0" prefWidth="150.0" />
+    <Label layoutX="14.0" layoutY="81.0" text="category name:" />
+    <TextField fx:id="categoryName" layoutX="106.0" layoutY="77.0" onKeyReleased="#updateCategoryName" promptText="Enter a name" styleClass="underlinedTextField"> </TextField>
+    <TextField fx:id="attribute" layoutX="105.0" layoutY="175.0" promptText="Enter an Attribute" styleClass="underlinedTextField"> </TextField>
+    <ListView fx:id="attributeList" layoutX="327.0" layoutY="58.0" onMouseClicked="#remove" prefHeight="235.0" prefWidth="248.0" />
+    <Button layoutX="261.0" layoutY="175.0" onMouseClicked="#add" text="+" />
+    <Label layoutX="18.0" layoutY="180.0" text="Add Attribute:" />
+    <Label layoutX="13.0" layoutY="236.0" text="father category:" />
+    <Button layoutX="131.0" layoutY="315.0" onMouseClicked="#create" prefHeight="25.0" prefWidth="149.0" text="create category" />
+    <Button layoutX="63.0" layoutY="315.0" onMouseClicked="#reset" text="reset" />
+   <ChoiceBox fx:id="fatherCategoryChoice" layoutX="105.0" layoutY="232.0" prefWidth="150.0" />
+   <Text layoutX="403.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Attributes" />
 </AnchorPane>
