--- a/src/main/resources/fxml/AdminMenu/AddDiscountCode.fxml
+++ b/src/main/resources/fxml/AdminMenu/AddDiscountCode.fxml
@@ -3,33 +3,24 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="707.0" style="-fx-background-color: #dedcde;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.AddDiscountCode">
-    <MenuBar>
+<AnchorPane prefHeight="445.0" prefWidth="707.0" style="-fx-background-color: #dedcde;" stylesheets="@../../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.AddDiscountCode">
+    <MenuBar prefHeight="25.0" prefWidth="707.0" styleClass="myMenuBar">
         <Menu text="options">
             <MenuItem onAction="#back" text="back" />
         </Menu>
     </MenuBar>
-            <Label layoutX="55.0" layoutY="31.0" prefHeight="17.0" prefWidth="48.0" text="percent:" />
-            <TextField fx:id="percent" layoutX="111.0" layoutY="26.0" onKeyReleased="#updatePercent" />
+            <TextField fx:id="percent" layoutX="72.0" layoutY="73.0" onKeyReleased="#updatePercent" promptText="Discount Percentage" styleClass="underlinedTextField" />
+            <TextField fx:id="maxDiscount" layoutX="72.0" layoutY="126.0" onKeyReleased="#updateMaxDiscount" promptText="Max. Discount Amount" styleClass="underlinedTextField" />
+            <TextField fx:id="usage" layoutX="72.0" layoutY="178.0" onKeyReleased="#updateUsage" promptText="Max. Usage Count" styleClass="underlinedTextField" />
 
-            <Label layoutX="27.0" layoutY="73.0" text="max discount:" />
-            <TextField fx:id="maxDiscount" layoutX="111.0" layoutY="68.0" onKeyReleased="#updateMaxDiscount" />
+             <DatePicker fx:id="start" layoutX="72.0" layoutY="223.0" promptText="Starting Date" style="-fx-border-width: 2 2 2 2; -fx-color: #94a8b3;" styleClass="underlinedTextField"> </DatePicker>
 
-            <Label layoutX="65.0" layoutY="113.0" text="usage:" />
-            <TextField fx:id="usage" layoutX="111.0" layoutY="108.0" onKeyReleased="#updateUsage" />
+             <DatePicker fx:id="end" layoutX="72.0" layoutY="275.0" promptText="Ending Date" style="-fx-border-width: 2 2 2 2; -fx-color: #94a8b3;" styleClass="underlinedTextField" />
 
-            <Label layoutX="70.0" layoutY="156.0" text="start:" />
-
-             <Label layoutX="71.0" layoutY="201.0" text="end:" />
-
-             <DatePicker fx:id="start" layoutX="111.0" layoutY="151.0"> </DatePicker>
-
-             <DatePicker fx:id="end" layoutX="111.0" layoutY="196.0" />
-
-             <Button layoutX="111.0" layoutY="246.0" onMouseClicked="#create" prefHeight="27.0" prefWidth="161.0" text="create code"> </Button>
-             <Button layoutX="111.0" layoutY="290.0" onMouseClicked="#reset" prefHeight="27.0" prefWidth="161.0" text="reset" />
-             <ListView fx:id="userList" layoutX="316.0" layoutY="25.0" onMouseClicked="#selectUser" prefHeight="291.0" prefWidth="183.0" />
-             <ListView fx:id="selectedUserList" layoutX="510.0" layoutY="25.0" prefHeight="291.0" prefWidth="183.0" />
-             <Label layoutX="316.0" layoutY="326.0" text="please select discount code users" />
-              <Label layoutX="587.0" layoutY="326.0" text="users" />
+             <Button layoutX="115.0" layoutY="352.0" onMouseClicked="#create" prefHeight="27.0" prefWidth="161.0" text="create code"> </Button>
+             <Button layoutX="46.0" layoutY="351.0" onMouseClicked="#reset" prefHeight="27.0" prefWidth="57.0" text="reset" />
+             <ListView fx:id="userList" layoutX="317.0" layoutY="73.0" onMouseClicked="#selectUser" prefHeight="291.0" prefWidth="183.0" />
+             <ListView fx:id="selectedUserList" layoutX="511.0" layoutY="73.0" prefHeight="291.0" prefWidth="183.0" />
+             <Label layoutX="320.0" layoutY="365.0" text="please select discount code users" />
+              <Label layoutX="556.0" layoutY="365.0" prefHeight="17.0" prefWidth="92.0" text="selected users" />
 </AnchorPane>
