--- a/src/main/resources/fxml/AdminMenu/EditCategory.fxml
+++ b/src/main/resources/fxml/AdminMenu/EditCategory.fxml
@@ -3,20 +3,19 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="427.0" prefWidth="353.0" style="-fx-background-color: #dedcde;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.EditCategory">
-    <MenuBar>
+<AnchorPane prefHeight="484.0" prefWidth="450.0" style="-fx-background-color: #dedcde;" stylesheets="@../../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.EditCategory">
+    <MenuBar prefHeight="25.0" prefWidth="450.0" styleClass="myMenuBar">
         <Menu text="options">
             <MenuItem onAction="#back" text="back" />
         </Menu>
     </MenuBar>
-    <Button layoutX="260.0" layoutY="40.0" onMouseClicked="#changeName" text="change" />
-        <Label layoutX="27.0" layoutY="45.0" text="name:" />
-       <TextField fx:id="categoryNameField" layoutX="86.0" layoutY="40.0" onKeyReleased="#updateCategoryName" />
+    <Button layoutX="260.0" layoutY="40.0" onMouseClicked="#changeName" prefHeight="25.0" prefWidth="129.0" text="change name" />
+       <TextField fx:id="categoryNameField" layoutX="86.0" layoutY="40.0" onKeyReleased="#updateCategoryName" promptText="Enter a new name" styleClass="underlinedTextField" />
 
-       <Button layoutX="260.0" layoutY="98.0" onMouseClicked="#addAttribute" prefHeight="27.0" prefWidth="59.0" text="+" />
-       <Label layoutX="13.0" layoutY="103.0" text="attribute:" />
-       <TextField fx:id="attributeField" layoutX="86.0" layoutY="98.0" />
+       <Button layoutX="330.0" layoutY="125.0" onMouseClicked="#addAttribute" prefHeight="27.0" prefWidth="59.0" text="+" />
+       <Label layoutX="86.0" layoutY="103.0" prefHeight="17.0" prefWidth="92.0" text="Add Attributes" />
+       <TextField fx:id="attributeField" layoutX="86.0" layoutY="125.0" promptText="Enter a new Attribute" styleClass="underlinedTextField" />
 
-      <ListView fx:id="info" layoutX="16.0" layoutY="166.0" prefHeight="228.0" prefWidth="300.0" />
-    <Button layoutX="264.0" layoutY="139.0" onMouseClicked="#delete" text="delete" />
+      <ListView fx:id="info" layoutX="75.0" layoutY="211.0" prefHeight="228.0" prefWidth="300.0" />
+    <Button layoutX="259.0" layoutY="445.0" onMouseClicked="#delete" prefHeight="25.0" prefWidth="116.0" text="delete category" />
 </AnchorPane>
