--- a/src/main/resources/fxml/BuyerMenu/BuyerEditPersonalInfo.fxml
+++ b/src/main/resources/fxml/BuyerMenu/BuyerEditPersonalInfo.fxml
@@ -4,32 +4,27 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="444.0" prefWidth="611.0" style="-fx-background-color: #dedcde;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.BuyerMenu.BuyerEditPersonalInfo">
-<MenuBar>
+<AnchorPane prefHeight="444.0" prefWidth="611.0" style="-fx-background-color: #dedcde;" stylesheets="@../../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.BuyerMenu.BuyerEditPersonalInfo">
+<MenuBar prefHeight="25.0" prefWidth="611.0" styleClass="myMenuBar">
     <Menu text="options">
         <MenuItem onAction="#logout" />
         <MenuItem onAction="#back" text="back" />
     </Menu>
 </MenuBar>
-<Label layoutX="24.0" layoutY="20.0" text="Name:" />
-<Label layoutX="14.0" layoutY="62.0" text="Surname:" />
-<Label layoutX="27.0" layoutY="102.0" text="Email:" />
-<Label layoutX="19.0" layoutY="143.0" text="Number:" />
-<Label layoutX="10.0" layoutY="188.0" text="password:"> </Label>
-<PasswordField fx:id="passwordField" layoutX="68.0" layoutY="183.0" />
-<TextField fx:id="passwordTextField" layoutX="68.0" layoutY="183.0" />
-<CheckBox fx:id="passwordCheckBox" layoutX="243.0" layoutY="216.0" mnemonicParsing="false" text="show password?" />
-<Button layoutX="243.0" layoutY="183.0" onMouseClicked="#changePassword" prefHeight="27.0" prefWidth="72.0" text="change" />
-<TextField fx:id="name" layoutX="68.0" layoutY="15.0" onKeyReleased="#updateName" />
-<TextField fx:id="surname" layoutX="68.0" layoutY="57.0" onKeyReleased="#updateName" />
-<TextField fx:id="email" layoutX="68.0" layoutY="97.0" onKeyReleased="#updateEmail" />
-<TextField fx:id="number" layoutX="68.0" layoutY="138.0" onKeyReleased="#updateNumber" />
-<ListView fx:id="personalInfo" layoutX="14.0" layoutY="215.0" prefHeight="198.0" prefWidth="217.0" />
-<ImageView fx:id="imageView" fitHeight="148.0" fitWidth="244.0" layoutX="321.0" layoutY="10.0" />
-<Button layoutX="243.0" layoutY="15.0" onMouseClicked="#changeName" prefHeight="27.0" prefWidth="72.0" text="change" />
-<Button layoutX="243.0" layoutY="55.0" onMouseClicked="#changeSurname" prefHeight="27.0" prefWidth="72.0" text="change" />
-<Button layoutX="243.0" layoutY="95.0" onMouseClicked="#changeEmail" prefHeight="27.0" prefWidth="72.0" text="change" />
-<Button layoutX="243.0" layoutY="135.0" onMouseClicked="#changeNumber" prefHeight="27.0" prefWidth="72.0" text="change" />
-<Button layoutX="321.0" layoutY="183.0" mnemonicParsing="false" onAction="#removeImage" text="remove image" />
-<Button layoutX="443.0" layoutY="183.0" mnemonicParsing="false" onAction="#changeImage" text="change image" />
+<PasswordField fx:id="passwordField" layoutX="68.0" layoutY="193.0" styleClass="underlinedTextField" />
+<TextField fx:id="passwordTextField" layoutX="68.0" layoutY="193.0" promptText="New Password" styleClass="underlinedTextField" />
+<CheckBox fx:id="passwordCheckBox" layoutX="109.0" layoutY="222.0" mnemonicParsing="false" text="show password?" />
+<Button layoutX="231.0" layoutY="193.0" onMouseClicked="#changePassword" prefHeight="27.0" prefWidth="72.0" text="change" />
+<TextField fx:id="name" layoutX="68.0" layoutY="47.0" onKeyReleased="#updateName" promptText="New First Name" styleClass="underlinedTextField" />
+<TextField fx:id="surname" layoutX="68.0" layoutY="84.0" onKeyReleased="#updateName" promptText="New Surname" styleClass="underlinedTextField" />
+<TextField fx:id="email" layoutX="68.0" layoutY="124.0" onKeyReleased="#updateEmail" promptText="New Email" styleClass="underlinedTextField" />
+<TextField fx:id="number" layoutX="68.0" layoutY="158.0" onKeyReleased="#updateNumber" promptText="New Number" styleClass="underlinedTextField" />
+<ListView fx:id="personalInfo" layoutX="14.0" layoutY="252.0" prefHeight="179.0" prefWidth="217.0" />
+<ImageView fx:id="imageView" fitHeight="148.0" fitWidth="244.0" layoutX="353.0" layoutY="25.0" />
+<Button layoutX="231.0" layoutY="46.0" onMouseClicked="#changeName" prefHeight="27.0" prefWidth="72.0" text="change" />
+<Button layoutX="231.0" layoutY="84.0" onMouseClicked="#changeSurname" prefHeight="27.0" prefWidth="72.0" text="change" />
+<Button layoutX="231.0" layoutY="124.0" onMouseClicked="#changeEmail" prefHeight="27.0" prefWidth="72.0" text="change" />
+<Button layoutX="231.0" layoutY="158.0" onMouseClicked="#changeNumber" prefHeight="27.0" prefWidth="72.0" text="change" />
+<Button layoutX="397.0" layoutY="184.0" mnemonicParsing="false" onAction="#removeImage" text="remove image" />
+<Button layoutX="506.0" layoutY="184.0" mnemonicParsing="false" onAction="#changeImage" text="change image" />
         </AnchorPane>
