--- a/src/main/resources/fxml/SellerMenu/SellerAddOff.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerAddOff.fxml
@@ -13,11 +13,11 @@
             </Menu>
         </menus>
     </MenuBar>
-   <TextField fx:id="offPercentage" layoutX="160.0" layoutY="116.0" onKeyReleased="#updatePercent" prefHeight="25.0" prefWidth="157.0" promptText="Enter an Integer" />
-   <Label layoutX="64.0" layoutY="120.0" prefHeight="17.0" prefWidth="81.0" text="Off Percentage" />
-   <DatePicker fx:id="startDate" layoutX="160.0" layoutY="176.0" prefHeight="25.0" prefWidth="157.0" />
+   <TextField fx:id="offPercentage" layoutX="160.0" layoutY="116.0" onKeyReleased="#updatePercent" prefHeight="25.0" prefWidth="157.0" promptText="Enter an Integer" styleClass="underlinedTextField" />
+   <Label layoutX="64.0" layoutY="120.0" prefHeight="17.0" prefWidth="89.0" text="Off Percentage:" />
+   <DatePicker fx:id="startDate" layoutX="160.0" layoutY="176.0" prefHeight="25.0" prefWidth="157.0" style="-fx-border-width: 2 2 2 2; -fx-color: #94a8b3;" styleClass="underlinedTextField" />
    <Label layoutX="93.0" layoutY="180.0" prefHeight="17.0" prefWidth="52.0" text="Starts at" />
-   <DatePicker fx:id="endDate" layoutX="160.0" layoutY="238.0" prefHeight="25.0" prefWidth="157.0" />
+   <DatePicker fx:id="endDate" layoutX="160.0" layoutY="238.0" prefHeight="25.0" prefWidth="157.0" style="-fx-border-width: 2 2 2 2; -fx-color: #94a8b3;" />
    <Label layoutX="91.0" layoutY="242.0" prefHeight="17.0" prefWidth="52.0" text="Ends at" />
    <Label layoutX="160.0" layoutY="42.0" prefHeight="43.0" prefWidth="157.0" text="Enter Sale Details" />
    <Separator layoutX="383.0" layoutY="35.0" orientation="VERTICAL" prefHeight="406.0" prefWidth="8.0" />
