userzone background and alignment

--- a/src/main/resources/Styles.CSS
+++ b/src/main/resources/Styles.CSS
@@ -64,7 +64,7 @@
     }
 
     .userZoneBackground{
-        -fx-background-image: url("design/userZone");
+        -fx-background-image: url("design/userZone.png");
     }
 
     .myTextField{
