--- a/src/main/resources/fxml/BuyerMenu/BuyerMenu.fxml
+++ b/src/main/resources/fxml/BuyerMenu/BuyerMenu.fxml
@@ -25,9 +25,9 @@
                </Menu>
            </menus>
        </MenuBar>
-      <ImageView fx:id="userImage" fitHeight="170.0" fitWidth="201.0" layoutX="245.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true" />
-      <BorderPane layoutX="48.0" layoutY="328.0" prefHeight="200.0" prefWidth="475.0" />
-       <Label fx:id="personalInfo" layoutX="26.0" layoutY="39.0" prefHeight="161.0" prefWidth="190.0" />
+       <Button layoutX="203.0" layoutY="321.0" onMouseClicked="#viewEditPersonalInfo" prefHeight="27.0" prefWidth="190.0" text="edit personal info"> </Button>
+      <ImageView fx:id="userImage" fitHeight="170.0" fitWidth="201.0" layoutX="202.0" layoutY="115.0" pickOnBounds="true" preserveRatio="true" />
+       <Label fx:id="personalInfo" layoutX="208.0" layoutY="390.0" prefHeight="300.0" prefWidth="482.0" />
    </children>
 
 </AnchorPane>
