--- a/src/main/resources/fxml/SellerMenu/SellerMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerMenu.fxml
@@ -6,7 +6,7 @@
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="userZoneBackground" stylesheets="@../../Styles.CSS" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.SellerMenuController.SellerMenuController">
    <children>
-       <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0" styleClass="myMenuBar">
+       <MenuBar prefHeight="25.0" prefWidth="1280.0" styleClass="myMenuBar">
            <menus>
                <Menu mnemonicParsing="false" text="option">
                   <items>
@@ -28,8 +28,9 @@
                </Menu>
            </menus>
        </MenuBar>
+       <Button layoutX="203.0" layoutY="321.0" onMouseClicked="#editPersonalInfo" prefHeight="27.0" prefWidth="190.0" text="edit personal info"> </Button>
       <ImageView fx:id="sellerImage" fitHeight="150.0" fitWidth="200.0" layoutX="223.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true" />
-       <Label fx:id="personalInfo" layoutX="14.0" layoutY="42.0" prefHeight="158.0" prefWidth="190.0" />
+       <Label fx:id="personalInfo" layoutX="204.0" layoutY="393.0" prefHeight="294.0" prefWidth="500.0" />
    </children>
 
 </AnchorPane>
